site/src/pages/_index/accordion/Accordion.module.css
.accordionContainer {
  display: grid;
  grid-template-columns: 1fr auto;
  /* 468px is height of hatching in illustration */
  grid-template-rows: 468px auto;
  overflow: hidden;
}

.accordionIllustration {
  grid-area: 1 / 2 / 3 / 3;
}

.wrapper {
  background-color: var(--card-background);
  width: 55vw;
  padding: calc(var(--uitk-size-unit) * 10);
  grid-area: 2 / 1 / 3 / 3;
  min-height: 70vh;
}

.accordion {
  padding: calc(var(--uitk-size-unit) * 2) 0;
}

.accordion .summary {
  background-color: transparent;
  padding-left: 0;
}

.accordion .summary:hover {
  background: none;
}

.accordion .summary h2 {
  line-height: var(--accordion-summary-height);
  font-weight: var(--uitk-text-h2-fontWeight);
  font-size: var(--uitk-text-h2-fontSize);
}

.keyline {
  height: 3px;
  width: calc(100% + calc(var(--uitk-size-unit) * 20));
  position: relative;
  left: calc(-1 * var(--uitk-size-unit) * 10);
  top: calc(var(--uitk-size-unit) * 10);
  background-color: var(--uitk-color-teal-50);
}

.animate {
  animation: swing-in-left-bck 3s cubic-bezier(0.175, 0.885, 0.32, 1.275) both;
}

/* Override Salt accordion styles */

.summary :global(.uitkAccordionSummary-icon) {
  left: unset;
  right: 0;
}

.summary :global(.uitkAccordionSummary-icon:hover) {
  background: var(--accordion-summary-background-hover);
}

.accordion :global(.uitkAccordionDetails .uitkAccordionDetails-content) {
  padding-left: 0;
}

/* ----------------------------- */

@keyframes swing-in-left-bck {
  0% {
    transform: rotateY(-70deg);
    transform-origin: left;
    opacity: 0;
  }
  100% {
    transform: rotateY(0);
    transform-origin: left;
    opacity: 1;
  }
}

@media screen and (max-width: 1280px) {
  .accordionContainer {
    display: block;
  }

  .accordionIllustration {
    width: 100%;
    height: auto;
    /* pull up subsequent elements by half the image's height */
    margin-bottom: -50%;
  }

  .wrapper {
    /* creates a new stacking context and ensures this sits above the illustration */
    position: relative;
    width: 100%;
    padding: calc(var(--uitk-size-unit) * 2);
  }
}

